--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 MÓDULO 2/carpetasFGJ_acumulado_2023_12.csv
 MÓDULO 2/cubo_delitos_sin_geo.csv
+MÓDULO 2/carpetasFGJ_acumulado_2023_12.csv
+MÓDULO 2/cubo_delitos_sin_geo.csv
